<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="anteeo.com.pl.zoltansport.MenuActivity">
    <TextView android:id="@+id/loggedAsTextView"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true" android:layout_alignParentEnd="true"
        android:paddingRight="@dimen/main_padding" android:paddingEnd="@dimen/main_padding"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="@dimen/main_padding"
        android:layout_centerInParent="true">
        <Button android:id="@+id/adoptionButton"
            android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/MenuButton"
            android:text="@string/adoption_label" android:layout_marginTop="0dp"/>
        <Button android:id="@+id/releaseButton"
            android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/MenuButton"
            android:text="@string/release_label" android:layout_marginTop="@dimen/components_top_margin"/>
        <Button android:id="@+id/stockButton"
            android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/MenuButton"
            android:text="@string/stock_label"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:weightSum="2" android:orientation="horizontal" android:layout_marginTop="@dimen/components_top_margin"
        android:layout_alignParentBottom="true">
        <Button android:id="@+id/quitButton"
            android:layout_height="wrap_content" android:layout_width="wrap_content" style="@style/SampleButton"
            android:layout_weight="1" android:text="@string/quit_label" />
        <Button android:id="@+id/backButton"
            android:layout_height="wrap_content" android:layout_width="wrap_content" style="@style/SampleButton"
            android:layout_weight="1" android:text="@string/user_label"/>
    </LinearLayout>

</RelativeLayout>
