<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context="anteeo.com.pl.zoltansport.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical" android:padding="@dimen/main_padding"
    android:layout_centerInParent="true">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:textSize="@dimen/small_label" android:textColor="@color/small_label"
        android:text="@string/login_label"/>
    <EditText android:id="@+id/loginEditText"
        android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/EditText"
        android:textStyle="bold" android:inputType="textWebEditText"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
        android:textSize="@dimen/small_label" android:textColor="@color/small_label"
        android:text="@string/pass_label" android:layout_marginTop="@dimen/components_top_margin"/>
    <EditText android:id="@+id/passEditText"
        android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/EditText"
        android:textStyle="bold" android:inputType="textPassword"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:weightSum="2" android:orientation="horizontal" android:layout_marginTop="@dimen/components_top_margin">
        <Button android:id="@+id/backButton"
            android:layout_height="wrap_content" android:layout_width="wrap_content" style="@style/SampleButton"
            android:layout_weight="1" android:text="@string/quit_label" />
        <Button android:id="@+id/loginButton"
            android:layout_height="wrap_content" android:layout_width="wrap_content" style="@style/SampleButton"
            android:layout_weight="1" android:text="@string/ok_label" android:background="@drawable/ok_button_selector"/>
    </LinearLayout>
</LinearLayout>
</RelativeLayout>

